# roboarm-urdf

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_roboarm.yaml
launch/: display.launch.py
meshes/: base_link.STL  lower arm.STL  rotatory yoke.STL  shoulder drive.STL  upper arm.STL  wrist module.STL
urdf/: roboarm.csv  roboarm.urdf
